backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: platform
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
  type: NodePort
